Update .yml file to address migrate prompt

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Terraform Format
         run: terraform fmt -check
 
-      - name: Terraform Init
-        run: terraform init
+      - - name: Terraform Init (Reconfigure)
+          run: terraform init -reconfigure
 
       - name: Terraform Validate
         run: terraform validate
